--- a/Example/examplePDF.tex
+++ b/Example/examplePDF.tex
@@ -3,6 +3,8 @@
 \usepackage{xcolor}
 \begin{document}
 	
+	This is an example
+	
 \def\svgwidth{0.7\textwidth}
  \input{drawing.pdf_tex}
 \end{document}
